still not fixed but better behaving slick slider when wraparound

--- a/web/themes/custom/owen/source/sass/0-config/_patterns.scss
+++ b/web/themes/custom/owen/source/sass/0-config/_patterns.scss
@@ -10,6 +10,13 @@
   outline-offset: $offset !important;
 }
 
+// Universal transitions
+@mixin universal-transitions($properties: [background-color, border-color, box-shadow, color, opacity, text-shadow, transform, filter, -webkit-filter]) {
+  transition-duration: 0.2s;
+  transition-property: $properties;
+  transition-timing-function: linear;
+}
+
 %label {
   @include font-size(20px);
   @include font-weight(light);
