--- a/web/themes/custom/owen/source/sass/3-components/_slick.scss
+++ b/web/themes/custom/owen/source/sass/3-components/_slick.scss
@@ -147,6 +147,7 @@ $line-height: calc(#{$size} - #{$border-size});
         .slide-image-wrapper {
           opacity: .45;
           filter: grayscale(1);
+          transition: transform 0.5s;
         }
 
         .slide-title {
@@ -159,33 +160,37 @@ $line-height: calc(#{$size} - #{$border-size});
 
         .slide-text-wrapper {
           opacity: 0;
-        }
-      }
-      &.slick-center {
-        .slide-wrapper {
-          margin: 0 20px;
-          transform: scale(1.25);
-
-          .slide-image-wrapper {
-            opacity: 1;
-            filter: grayscale(0);
-          }
-
-          .slide-title {
-            top: 0;
-            bottom: auto;
-            color: $white;
-            text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-            @include font-weight(bold);
-          }
-
-          .slide-text-wrapper {
-            opacity: 1;
-          }
+          transition: transform 0.5s;
         }
       }
     }
+    .slick-slide.slick-center {
+      .slide-wrapper {
+        margin: 0 20px;
+        transform: scale(1.25);
+        transition: transform 0.5s;
 
+        .slide-image-wrapper {
+          opacity: 1;
+          filter: grayscale(0);
+          transition: transform 0.5s;
+        }
+
+        .slide-title {
+          top: 0;
+          bottom: auto;
+          color: $white;
+          text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+          @include font-weight(bold);
+        }
+
+        .slide-text-wrapper {
+          opacity: 1;
+          transition: transform 0.5s;
+        }
+      }
+    }
+    
     .slick-arrow {
       &.slick-next {
         right: 7%;
