--- a/web/themes/custom/owen/source/sass/html-elements.scss
+++ b/web/themes/custom/owen/source/sass/html-elements.scss
@@ -11,15 +11,6 @@
   box-sizing: border-box;
 }
 
-*,
-*:after,
-*:before {
-  // Universal transitions
-  transition-duration: 0.2s;
-  transition-property: background-color, border-color, box-shadow, color, opacity, text-shadow, transform, filter, -webkit-filter;
-  transition-timing-function: linear;
-}
-
 html {
   box-sizing: border-box;
   min-height: 100%;
